# Hole-Measures

./: .gitignore  CMakeLists.txt  LICENSE  README.md  compute_holes_meshes  evaluation.txt  medialtype_count_meshes
data/: Gear.off  ballcube.off
include/: cgal_typedef.h  delaunay_helper.h  filtration.h  filtration_medial.h  filtration_medial_axes.h  filtration_v.h  filtration_voronoi.h  input_parser.h  persistence.h  resampling.h
include/phat/: boundary_matrix.h
include/phat/representations/: Container_traits.h  Pivot_representation.h  Uniform_representation.h  Unordered_map_container_traits.h  bit_tree_pivot_column.h  default_representations.h  full_pivot_column.h  heap_column_rep.h  heap_pivot_column.h  list_column_rep.h  set_column_rep.h  sparse_pivot_column.h  vector_column_rep.h
mains/: main_link.cpp  main_medial.cpp  main_medial_count.cpp  main_resampling.cpp  main_voronoi.cpp
src/: delaunay_helper.cpp  filtration.cpp  filtration_medial.cpp  filtration_medial_axes.cpp  filtration_v.cpp  filtration_voronoi.cpp  input_parser.cpp  persistence.cpp  resampling.cpp
tools/gui/: README.md  chartview.cpp  chartview.h  hole-measures-gui.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui  meshviewerwidget.cpp  meshviewerwidget.h  yann-topo-gui.pro.user.hfEyyb
tools/gui/OpenMesh/liblinux/: libOpenMeshCore.so.7.1
tools/gui/OpenMesh/libosx/: libOpenMeshCore.7.1.dylib  libOpenMeshTools.7.1.dylib
